Raw integration of firebase for connecting users

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,15 @@
 <%- include('./parts/head') %>
     <%- include('./parts/header') %>
 
+        <main>
+            <p>
+                <h1 class="text-light">Hello World !</h1>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+            </p>
+        </main>
 
-        <%- include('./parts/toprow/row', {core: core, projects: projects}) %>
-            <!-- tracks/output // {core: core, projects: projects} // SONT OPTIONNELS ??? SUR LES DEUX ??? o_O-->
-            <%- include('./parts/bottomrow/row', {core: core, projects: projects}) %>
 
-                <%- include('./scripts') %>
-
-                    <%- include('./parts/footer') %>
+        <%- include('./parts/footer') %>
