--- a/views/parts/footer.ejs
+++ b/views/parts/footer.ejs
@@ -1,7 +1,6 @@
-<!-- <footer class="mt-auto d-flex justify-content-center"> -->
-<!-- <footer class="">
-  Black Beat is powered by Far Worst Studio
-</footer> -->
+<footer class="mt-auto text-light bg-dark">
+  Le blog du futur est produit par 5 vaillants de Simplon St Gaudens
+</footer>
 
 </div>
 
