Cleaned up the code from firebase. We will be using an homemade method to register and handle users connections

--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -1,12 +1,5 @@
 <div id="main_container" class="container-fluid d-flex h-100 p-0 flex-column">
 
-    <!-- <header class="mb-auto"> -->
-    <!-- <header class="fixed-top">
-        <nav class="navbar navbar-expand navbar-dark bg-dark p-0">
-            <h1 class="navbar-brand mx-3">Far Worst Chat</h1>
-        </nav>
-    </header> -->
-
     <header class="d-flexmb-auto m-0">
         
         <nav class="navbar navbar-expand navbar-dark bg-dark p-0 m-0">
@@ -47,11 +40,11 @@
                 </div>
 
 
-                <div id="logged-button" class="nav-item mr-3">
+                <div id="logged-button bg-secondary rounded" class="nav-item mr-3">
                     <button class="btn btn-sm btn-warning" onclick="logout()">
                         <i class="fas fa-times"></i>
                     </button>
-                    <span id="userpage" class="mr-2" href="user.html">User Email</span>
+                    <span id="userpage" class="mr-2" href="user.html">Username</span>
                 </div>
 
             </div>
