added the post and comments vues

--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -1,6 +1,6 @@
 <div id="main_container" class="container-fluid d-flex h-100 p-0 flex-column">
 
-    <header class="d-flexmb-auto m-0">
+    <header class="m-0 text-light">
         
         <nav class="navbar navbar-expand navbar-dark bg-dark p-0 m-0">
 
