--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,13 @@
 <%- include('./parts/head') %>
     <%- include('./parts/header') %>
+        <main class="row">
 
-        <main>
-            <p>
-                <h1 class="text-light">Hello World !</h1>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-            </p>
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+            <%- include('./parts/post') %>
+                <%- include('./parts/post') %>
+            </div>
+                    <div class="col-md-3"></div>
+
         </main>
-
-
         <%- include('./parts/footer') %>
