--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,8 @@
             </div>
                     <div class="col-md-3"></div>
 
+
+            <a href="/create"><button>Write new post</button></a>
+
         </main>
         <%- include('./parts/footer') %>
